# architecture-bionicpro

./: .$task2.drawio.bkp  .gitignore  AIRFLOW_3_MIGRATION.md  AIRFLOW_ETL_README.md  AIRFLOW_REST_API_ISSUE.md  AUTH_FIX_SUMMARY.md  AUTH_PROXY_README.md  BionicPRO_Architecture.puml  BionicPRO_C4_ETL.drawio  BionicPRO_C4_model.drawio  CLICKHOUSE_CONNECTION.md  CLICKHOUSE_KAFKA_ISSUE.md  DEBEZIUM_COMPARISON.md  DEBEZIUM_REPLICATION_FIX.md  FINAL_SUMMARY.md  FRONTEND_CLEANUP_SUMMARY.md  FRONTEND_SCROLL_UPDATE.md  IMPLEMENTATION_SUMMARY.md  IMPLEMENTATION_SUMMARY_AIRFLOW.md  KAFKA_DEBEZIUM_SETUP.md  KEYCLOAK_COOKIES_CLEANUP.md  MICROSERVICES_README.md  QUICK_START.md  README.MD  README.md  REFACTORING_SUMMARY.md  REPORTS_API_INIT_FIX.md  ReadMe.md  TTL_SETUP_SUMMARY.md  clickhouse_quick_test.sh  crm_init.sql  docker-compose.airflow.yaml  docker-compose.kafka-debezium.yaml  docker-compose.yaml  instructions.md  materialized-view-reports.sql  package-lock.json  package.json  pyproject.toml  restart_clickhouse.sh  (+8 more)
api/: app.js  (+19 more)
backend/: Dockerfile  Keys.json  Program.cs  ReportApi.csproj  ReportApi.http  ReportApi.sln  app.py  appsettings.json  build.gradle.kts  clickhouse.go  main.py  package-lock.json  package.json  pyproject.toml  reports.go  requirements.txt  server.js  settings.py
backend/Controllers/: ReportController.cs
backend/Extensions/: ClaimsPrincipalExtensions.cs
backend/Models/: Report.cs  ReportDate.cs
backend/Properties/: launchSettings.json
backend/Repositories/: ReportRepository.cs
backend/app/: main.py
backend/bionicpro-auth/: app.py  dockerfile  (+1 more)
(+381 files in other folders)
