[project]
name = "architecture-bionicpro"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.121.0",
    "httpx>=0.27.0",
    "pyjwt[crypto]>=2.9.0",
    "uvicorn>=0.38.0",
    "pytest>=8.0.0",
    "pytest-playwright>=0.4.0",
    "playwright>=1.40.0",
]

[tool.setuptools]
py-modules = []

[tool.setuptools.packages.find]
where = ["."]
include = ["reports_backend*", "tests*"]
exclude = ["frontend*", "keycloak*", "ldap*", "node_modules*", "bionicpro_auth*"]
